refactor:declare types

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+::-webkit-scrollbar{
+    background-color: rgb(255, 255, 255);
+    width: 10px;
+}
+
+::-webkit-scrollbar-thumb{
+    background-image: linear-gradient(to top , rgb(238, 199, 84) , rgb(31, 7, 136)70%);
+}
